# sdl-cpp

./: .gitignore  CMakeLists.txt
distribute/windows-os/: distribute-from-msys.bash
src/: app.cpp
